<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewCelsiusLabel"
        android:layout_width="234dp"
        android:layout_height="79dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/acme"
        android:text="@string/convert_from_celsius_to_fahrenheit"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCelsiusIn"
        android:layout_width="227dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/celsius_label"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCelsiusLabel" />

    <Button
        android:id="@+id/buttonCtoF"
        android:layout_width="111dp"
        android:layout_height="61dp"
        android:fontFamily="@font/acme"
        android:text="@string/convert_label"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCelsiusIn"
        app:layout_constraintVertical_bias="0.043" />

</androidx.constraintlayout.widget.ConstraintLayout>